Add new UI changes

--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
   <title>JIRA Ticket Management</title>
 </head>
 <body>
-  <div class="tools-container">
-    <div class="tools-priority-container">
-      <div class="color-box"></div>
-      <div class="color-box"></div>
-      <div class="color-box"></div>
-      <div class="color-box"></div>
+  <div class="header">
+    <h1>JIRA Ticket Management</h1>
+    <div class="action-container">
+      <div class="add-btn"></div>
+      <div class="remove-btn"></div>
     </div>
-    <div class="tools-action-container">
-      <div class="tools-action add-btn"></div>
-      <div class="tools-action remove-btn"></div>
-    </div>
+  </div>
+  <div class="priority-container">
+    <div class="color-box"></div>
+    <div class="color-box"></div>
+    <div class="color-box"></div>
+    <div class="color-box"></div>
   </div>
 </body>
 </html>
